name:                diesel-pool
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              winterland1989
maintainer:          winterland1989@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Diesel.Pool
  -- other-extensions:    
  build-depends:       base >=4.8 && <4.9
                    ,   bytestring
                    ,   atomic-primops
                    ,   vector
  -- hs-source-dirs:      
  default-language:    Haskell2010
